UPDATE Se hace logging a un archivo

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ PROVEEDORES_CSV=
 SUCURSALES_CSV=
 LOG_SIZE_IN_BYTES=1000000
 NUMBER_OF_LOGS=3
+DATABASE_PATH=C:\Users\Jonas\PycharmProjects\valijadigital\db.sqlite3
+LOG_FILENAME=valija_digital.log
